# clearurlsbot

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  BUILD_OPTIMIZATION.md  CHANGELOG.md  COMPILATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  FEATURES_IMPLEMENTED.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  backup_db.sh  build.sh  compose.yml  crontab.example  docker-compose.yml  podman-compose.yml  podman-deploy.sh  render.yaml  setup.sh
.cargo/: config.toml
.github/workflows/: ci.yml  codeql.yml  defang-deploy.yml  osv-scanner.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SCAN_CACHING.md  URLSCAN.md  VIRUSTOTAL.md
src/: bot.rs  config.rs  health.rs  i18n.rs  lib.rs  logging.rs  main.rs  security.rs
src/db/: implementation.rs  mod.rs  models.rs
src/sanitizer/: ai_engine.rs  mod.rs  rule_engine.rs  validation.rs
tests_disabled_temporarily/: bot_commands_tests.rs  database_tests.rs  sanitizer_tests.rs
tests_disabled_temporarily/common/: mod.rs
