[package]
name = "clear_urls_bot"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
default-run = "clear_urls_bot"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
teloxide = { version = "0.17", features = ["macros", "webhooks"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "set-header"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1.11"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time", "registry"] }
tracing-appender = "0.2"
tracing-error = "0.2"
dotenvy = "0.15"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower = { version = "0.5", features = ["util"] }
futures = "0.3"
time = "0.3"
async-stream = "0.3"
async-trait = "0.1"
whatlang = "0.18.0"
moka = { version = "0.12.12", features = ["future"] }
serde_urlencoded = "0.7.1"
once_cell = "1.20"

[profile.release]
# Optimize for performance
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = false

[profile.dev]
# Faster development builds
opt-level = 1
debug = true
overflow-checks = true
