[package]
name = "clear_urls_bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
default-run = "clear_urls_bot"

[dependencies]
# Tokio with only needed features (instead of "full")
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
teloxide = { version = "0.17", features = ["macros", "webhooks"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "set-header"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "postgres", "macros", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.2", features = ["json", "rustls-tls"], default-features = false }
regex = "1.11"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time", "registry"] }
tracing-appender = "0.2"
tracing-error = "0.2"
dotenvy = "0.15"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower = { version = "0.5", features = ["util"] }
futures = "0.3"
time = "0.3"
async-stream = "0.3"
async-trait = "0.1"
whatlang = "0.18.0"
moka = { version = "0.12.12", features = ["future"] }

serde_urlencoded = "0.7.1"
log = "0.4"
once_cell = "1.19"

[profile.release]
# Optimize for performance
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = false

[profile.dev]
# Faster development builds with better optimization
opt-level = 1
debug = 1  # Reduced debug info for faster compilation
incremental = true
overflow-checks = true

[profile.dev.package."*"]
# Optimize dependencies even in dev mode for better runtime performance
opt-level = 3
